// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/WorkflowTemplate/WorkflowTemplateDetail render workflow template detail 1`] = `
<body>
  <div>
    <div
      class="css-1w47t3a"
    >
      <div
        class="actiontech-page-header-namespace css-1xspr0w"
      >
        <div
          class="title"
        >
          审批流程模板
        </div>
        <div
          class="extra"
        >
          <a
            href="/sqle/project/700300/progress/update/700300-WorkflowTemplate"
          >
            <button
              class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="edit"
                  class="anticon anticon-edit"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="edit"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                    />
                  </svg>
                </span>
              </span>
              <span>
                修改当前审批流程模板
              </span>
            </button>
          </a>
        </div>
      </div>
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-row workflow-template-wrapper"
          >
            <div
              class="ant-col"
              style="flex-basis: auto;"
            >
              <div
                class="css-1j4pcp2"
              >
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container "
                >
                  <div
                    class="ant-col icon-wrapper"
                  >
                    <span
                      class="add-file-icon"
                    >
                      <svg
                        color="white"
                        fill="currentColor"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m9.333 1.167 2.917 2.916v8.172a.58.58 0 0 1-.58.578H2.33a.583.583 0 0 1-.58-.578V1.745c0-.32.26-.578.58-.578zm-2.916 5.25h-1.75v1.166h1.75v1.75h1.166v-1.75h1.75V6.417h-1.75v-1.75H6.417z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box"
                  >
                    <div
                      class="ant-row ant-row-no-wrap"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style css-18lc8oi"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            工单发起/工单更新SQL语句
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            工单被创建，或者工单被驳回后等待修改SQL语句
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row next-step-icon"
                >
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1 1 8 4 8-4"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1 1 8 4 8-4"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container "
                >
                  <div
                    class="ant-col icon-wrapper"
                  >
                    <span
                      class="audit-icon"
                    >
                      <svg
                        color="white"
                        fill="currentColor"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8.167 5.833c0-.554.33-1.043.671-1.48a2.333 2.333 0 1 0-3.677 0c.342.437.672.926.672 1.48H2.917c-.645 0-1.167.523-1.167 1.167v2.333c0 .323.261.584.583.584h9.334a.583.583 0 0 0 .583-.584V7c0-.644-.522-1.167-1.167-1.167zM12.25 12.25v-1.167H1.75v1.167z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box"
                  >
                    <div
                      class="ant-row ant-row-no-wrap"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style css-18lc8oi"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            审核节点
                            <span
                              class="review-index-text"
                            >
                              #1
                            </span>
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            -
                          </div>
                          <div
                            class="step-card-operator"
                          >
                            <div
                              class="operator-title"
                            >
                              审核人
                            </div>
                            <div
                              class="operator-content"
                            >
                              <svg
                                color="#1CB889"
                                height="18"
                                viewBox="0 0 16 16"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 1.333A6.67 6.67 0 0 1 14.666 8 6.67 6.67 0 0 1 8 14.667 6.67 6.67 0 0 1 1.333 8 6.67 6.67 0 0 1 8 1.333m-3.985 8.944c.979 1.46 2.448 2.39 4.091 2.39s3.113-.93 4.091-2.39a5.98 5.98 0 0 0-4.09-1.61 5.98 5.98 0 0 0-4.092 1.61M8 7.333a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                                  fill="currentColor"
                                />
                              </svg>
                              <span
                                class="review-exec-auth-text"
                              >
                                匹配拥有数据源审核权限的成员
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row next-step-icon"
                >
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1 1 8 4 8-4"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container "
                >
                  <div
                    class="ant-col icon-wrapper"
                  >
                    <span
                      class="audit-icon"
                    >
                      <svg
                        color="white"
                        fill="currentColor"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8.167 5.833c0-.554.33-1.043.671-1.48a2.333 2.333 0 1 0-3.677 0c.342.437.672.926.672 1.48H2.917c-.645 0-1.167.523-1.167 1.167v2.333c0 .323.261.584.583.584h9.334a.583.583 0 0 0 .583-.584V7c0-.644-.522-1.167-1.167-1.167zM12.25 12.25v-1.167H1.75v1.167z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box"
                  >
                    <div
                      class="ant-row ant-row-no-wrap"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style css-18lc8oi"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            审核节点
                            <span
                              class="review-index-text"
                            >
                              #2
                            </span>
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            step desc
                          </div>
                          <div
                            class="step-card-operator"
                          >
                            <div
                              class="operator-title"
                            >
                              审核人
                            </div>
                            <div
                              class="operator-content"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center work-flow-auth-avatar-wrapper basic-tooltips-wrapper css-4jbtl9"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-avatar ant-avatar-sm ant-avatar-circle work-flow-auth-avatar css-1wf5bre"
                                  >
                                    <span
                                      class="ant-avatar-string"
                                      style="transform: scale(1) translateX(-50%);"
                                    >
                                      T
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row next-step-icon"
                >
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1 1 8 4 8-4"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1 1 8 4 8-4"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space"
                >
                  <div
                    class="ant-col icon-wrapper"
                  >
                    <span
                      class="send-plane-icon"
                    >
                      <svg
                        color="white"
                        fill="currentColor"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M1.135 5.434c-.304-.102-.307-.266.006-.37l11.134-3.711c.309-.103.485.07.4.372L9.492 12.858c-.088.309-.266.32-.396.027L7 8.167 10.5 3.5 5.833 7z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box"
                  >
                    <div
                      class="ant-row ant-row-no-wrap"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style css-18lc8oi"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            执行上线
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            -
                          </div>
                          <div
                            class="step-card-operator"
                          >
                            <div
                              class="operator-title"
                            >
                              执行人
                            </div>
                            <div
                              class="operator-content"
                            >
                              <svg
                                color="#1CB889"
                                height="18"
                                viewBox="0 0 16 16"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 1.333A6.67 6.67 0 0 1 14.666 8 6.67 6.67 0 0 1 8 14.667 6.67 6.67 0 0 1 1.333 8 6.67 6.67 0 0 1 8 1.333m-3.985 8.944c.979 1.46 2.448 2.39 4.091 2.39s3.113-.93 4.091-2.39a5.98 5.98 0 0 0-4.09-1.61 5.98 5.98 0 0 0-4.092 1.61M8 7.333a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                                  fill="currentColor"
                                />
                              </svg>
                              <span
                                class="review-exec-auth-text"
                              >
                                匹配拥有数据源上线权限的成员
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col workflow-template-right-module"
              style="flex: 0 0 360px;"
            >
              <div
                class="css-ngjyz4"
              >
                <div
                  class="css-4kgje5"
                >
                  <span
                    class="ant-typography top-auth-level"
                  >
                    允许创建工单的最高审核等级
                  </span>
                  <span
                    class="ant-typography auth-level-text"
                    style="color: rgb(235, 173, 28);"
                  >
                    告警(Warning)
                  </span>
                  <div
                    aria-valuenow="75"
                    class="ant-progress ant-progress-status-normal ant-progress-steps"
                    role="progressbar"
                  >
                    <div
                      class="ant-progress-steps-outer"
                    >
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item"
                        style="background-color: rgb(235, 234, 231); width: 76.5px; height: 4px;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="css-aaj731"
                >
                  <span
                    class="ant-typography auth-info-title"
                  >
                    注意事项
                  </span>
                  <div
                    class="ant-typography auth-info-item"
                  >
                    <ul
                      class="auth-info-item-icon"
                    >
                      <li>
                        若项目管理员对审批流程模板进行了修改，不会对已经在审批流程的工单造成影响；
                      </li>
                      <li>
                        被驳回的工单，需要创建人更新SQL语句后重新发起，驳回记录可在 “工单进度-工单历史操作” 中查看；
                      </li>
                      <li>
                        处于 “审核节点” 中的工单，创建人可在工单详情页随时关闭；
                      </li>
                      <li>
                        审核工单：审核人在该步骤可以执行「审核通过」或「驳回」操作；
                      </li>
                      <li>
                        上线工单：执行人在该步骤可以执行「执行上线」或「驳回」操作。
                      </li>
                    </ul>
                  </div>
                </div>
                <div
                  class="css-aaj731"
                >
                  <span
                    class="ant-typography auth-info-title"
                  >
                    审批流程模板更新时间
                  </span>
                  <div
                    class="ant-typography auth-info-item auth-info-time"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 18 18"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9 16.5a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15M9 15A6 6 0 1 0 9 3a6 6 0 0 0 0 12m.75-6h3v1.5h-4.5V5.25h1.5z"
                        fill="#8A8F99"
                      />
                    </svg>
                    <span
                      class="update-time"
                    >
                      2023-12-26 14:19:12
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/WorkflowTemplate/WorkflowTemplateDetail render workflow template detail with no review step 1`] = `
<body>
  <div>
    <div
      class="css-1w47t3a"
    >
      <div
        class="actiontech-page-header-namespace css-1xspr0w"
      >
        <div
          class="title"
        >
          审批流程模板
        </div>
        <div
          class="extra"
        >
          <a
            href="/sqle/project/700300/progress/update/700300-WorkflowTemplate"
          >
            <button
              class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="edit"
                  class="anticon anticon-edit"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="edit"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                    />
                  </svg>
                </span>
              </span>
              <span>
                修改当前审批流程模板
              </span>
            </button>
          </a>
        </div>
      </div>
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-row workflow-template-wrapper"
          >
            <div
              class="ant-col"
              style="flex-basis: auto;"
            >
              <div
                class="css-1j4pcp2"
              >
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container "
                >
                  <div
                    class="ant-col icon-wrapper"
                  >
                    <span
                      class="add-file-icon"
                    >
                      <svg
                        color="white"
                        fill="currentColor"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m9.333 1.167 2.917 2.916v8.172a.58.58 0 0 1-.58.578H2.33a.583.583 0 0 1-.58-.578V1.745c0-.32.26-.578.58-.578zm-2.916 5.25h-1.75v1.166h1.75v1.75h1.166v-1.75h1.75V6.417h-1.75v-1.75H6.417z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box"
                  >
                    <div
                      class="ant-row ant-row-no-wrap"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style css-18lc8oi"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            工单发起/工单更新SQL语句
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            工单被创建，或者工单被驳回后等待修改SQL语句
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row next-step-icon"
                >
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1 1 8 4 8-4"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1 1 8 4 8-4"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space"
                >
                  <div
                    class="ant-col icon-wrapper"
                  >
                    <span
                      class="send-plane-icon"
                    >
                      <svg
                        color="white"
                        fill="currentColor"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M1.135 5.434c-.304-.102-.307-.266.006-.37l11.134-3.711c.309-.103.485.07.4.372L9.492 12.858c-.088.309-.266.32-.396.027L7 8.167 10.5 3.5 5.833 7z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box"
                  >
                    <div
                      class="ant-row ant-row-no-wrap"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style css-18lc8oi"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            执行上线
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            -
                          </div>
                          <div
                            class="step-card-operator"
                          >
                            <div
                              class="operator-title"
                            >
                              执行人
                            </div>
                            <div
                              class="operator-content"
                            >
                              <svg
                                color="#1CB889"
                                height="18"
                                viewBox="0 0 16 16"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 1.333A6.67 6.67 0 0 1 14.666 8 6.67 6.67 0 0 1 8 14.667 6.67 6.67 0 0 1 1.333 8 6.67 6.67 0 0 1 8 1.333m-3.985 8.944c.979 1.46 2.448 2.39 4.091 2.39s3.113-.93 4.091-2.39a5.98 5.98 0 0 0-4.09-1.61 5.98 5.98 0 0 0-4.092 1.61M8 7.333a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                                  fill="currentColor"
                                />
                              </svg>
                              <span
                                class="review-exec-auth-text"
                              >
                                匹配拥有数据源上线权限的成员
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col workflow-template-right-module"
              style="flex: 0 0 360px;"
            >
              <div
                class="css-ngjyz4"
              >
                <div
                  class="css-4kgje5"
                >
                  <span
                    class="ant-typography top-auth-level"
                  >
                    允许创建工单的最高审核等级
                  </span>
                  <span
                    class="ant-typography auth-level-text"
                    style="color: rgb(235, 173, 28);"
                  >
                    告警(Warning)
                  </span>
                  <div
                    aria-valuenow="75"
                    class="ant-progress ant-progress-status-normal ant-progress-steps"
                    role="progressbar"
                  >
                    <div
                      class="ant-progress-steps-outer"
                    >
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item"
                        style="background-color: rgb(235, 234, 231); width: 76.5px; height: 4px;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="css-aaj731"
                >
                  <span
                    class="ant-typography auth-info-title"
                  >
                    注意事项
                  </span>
                  <div
                    class="ant-typography auth-info-item"
                  >
                    <ul
                      class="auth-info-item-icon"
                    >
                      <li>
                        若项目管理员对审批流程模板进行了修改，不会对已经在审批流程的工单造成影响；
                      </li>
                      <li>
                        被驳回的工单，需要创建人更新SQL语句后重新发起，驳回记录可在 “工单进度-工单历史操作” 中查看；
                      </li>
                      <li>
                        处于 “审核节点” 中的工单，创建人可在工单详情页随时关闭；
                      </li>
                      <li>
                        审核工单：审核人在该步骤可以执行「审核通过」或「驳回」操作；
                      </li>
                      <li>
                        上线工单：执行人在该步骤可以执行「执行上线」或「驳回」操作。
                      </li>
                    </ul>
                  </div>
                </div>
                <div
                  class="css-aaj731"
                >
                  <span
                    class="ant-typography auth-info-title"
                  >
                    审批流程模板更新时间
                  </span>
                  <div
                    class="ant-typography auth-info-item auth-info-time"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 18 18"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9 16.5a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15M9 15A6 6 0 1 0 9 3a6 6 0 0 0 0 12m.75-6h3v1.5h-4.5V5.25h1.5z"
                        fill="#8A8F99"
                      />
                    </svg>
                    <span
                      class="update-time"
                    >
                      2023-12-26 14:19:12
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/WorkflowTemplate/WorkflowTemplateDetail render workflow template detail without permission 1`] = `
<body>
  <div>
    <div
      class="css-1w47t3a"
    >
      <div
        class="actiontech-page-header-namespace css-1xspr0w"
      >
        <div
          class="title"
        >
          审批流程模板
        </div>
        <div
          class="extra"
        />
      </div>
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-row workflow-template-wrapper"
          >
            <div
              class="ant-col"
              style="flex-basis: auto;"
            >
              <div
                class="css-1j4pcp2"
              >
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container "
                >
                  <div
                    class="ant-col icon-wrapper"
                  >
                    <span
                      class="add-file-icon"
                    >
                      <svg
                        color="white"
                        fill="currentColor"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m9.333 1.167 2.917 2.916v8.172a.58.58 0 0 1-.58.578H2.33a.583.583 0 0 1-.58-.578V1.745c0-.32.26-.578.58-.578zm-2.916 5.25h-1.75v1.166h1.75v1.75h1.166v-1.75h1.75V6.417h-1.75v-1.75H6.417z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box"
                  >
                    <div
                      class="ant-row ant-row-no-wrap"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style css-18lc8oi"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            工单发起/工单更新SQL语句
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            工单被创建，或者工单被驳回后等待修改SQL语句
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row next-step-icon"
                >
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1 1 8 4 8-4"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1 1 8 4 8-4"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container "
                >
                  <div
                    class="ant-col icon-wrapper"
                  >
                    <span
                      class="audit-icon"
                    >
                      <svg
                        color="white"
                        fill="currentColor"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8.167 5.833c0-.554.33-1.043.671-1.48a2.333 2.333 0 1 0-3.677 0c.342.437.672.926.672 1.48H2.917c-.645 0-1.167.523-1.167 1.167v2.333c0 .323.261.584.583.584h9.334a.583.583 0 0 0 .583-.584V7c0-.644-.522-1.167-1.167-1.167zM12.25 12.25v-1.167H1.75v1.167z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box"
                  >
                    <div
                      class="ant-row ant-row-no-wrap"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style css-18lc8oi"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            审核节点
                            <span
                              class="review-index-text"
                            >
                              #1
                            </span>
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            -
                          </div>
                          <div
                            class="step-card-operator"
                          >
                            <div
                              class="operator-title"
                            >
                              审核人
                            </div>
                            <div
                              class="operator-content"
                            >
                              <svg
                                color="#1CB889"
                                height="18"
                                viewBox="0 0 16 16"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 1.333A6.67 6.67 0 0 1 14.666 8 6.67 6.67 0 0 1 8 14.667 6.67 6.67 0 0 1 1.333 8 6.67 6.67 0 0 1 8 1.333m-3.985 8.944c.979 1.46 2.448 2.39 4.091 2.39s3.113-.93 4.091-2.39a5.98 5.98 0 0 0-4.09-1.61 5.98 5.98 0 0 0-4.092 1.61M8 7.333a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                                  fill="currentColor"
                                />
                              </svg>
                              <span
                                class="review-exec-auth-text"
                              >
                                匹配拥有数据源审核权限的成员
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row next-step-icon"
                >
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1 1 8 4 8-4"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container "
                >
                  <div
                    class="ant-col icon-wrapper"
                  >
                    <span
                      class="audit-icon"
                    >
                      <svg
                        color="white"
                        fill="currentColor"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8.167 5.833c0-.554.33-1.043.671-1.48a2.333 2.333 0 1 0-3.677 0c.342.437.672.926.672 1.48H2.917c-.645 0-1.167.523-1.167 1.167v2.333c0 .323.261.584.583.584h9.334a.583.583 0 0 0 .583-.584V7c0-.644-.522-1.167-1.167-1.167zM12.25 12.25v-1.167H1.75v1.167z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box"
                  >
                    <div
                      class="ant-row ant-row-no-wrap"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style css-18lc8oi"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            审核节点
                            <span
                              class="review-index-text"
                            >
                              #2
                            </span>
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            step desc
                          </div>
                          <div
                            class="step-card-operator"
                          >
                            <div
                              class="operator-title"
                            >
                              审核人
                            </div>
                            <div
                              class="operator-content"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center work-flow-auth-avatar-wrapper basic-tooltips-wrapper css-4jbtl9"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-avatar ant-avatar-sm ant-avatar-circle work-flow-auth-avatar css-1wf5bre"
                                  >
                                    <span
                                      class="ant-avatar-string"
                                      style="transform: scale(1) translateX(-50%);"
                                    >
                                      T
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row next-step-icon"
                >
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1 1 8 4 8-4"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <svg
                    fill="none"
                    height="6"
                    viewBox="0 0 18 6"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1 1 8 4 8-4"
                      stroke="#E6E4E3"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <div
                  class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space"
                >
                  <div
                    class="ant-col icon-wrapper"
                  >
                    <span
                      class="send-plane-icon"
                    >
                      <svg
                        color="white"
                        fill="currentColor"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M1.135 5.434c-.304-.102-.307-.266.006-.37l11.134-3.711c.309-.103.485.07.4.372L9.492 12.858c-.088.309-.266.32-.396.027L7 8.167 10.5 3.5 5.833 7z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-col step-box"
                  >
                    <div
                      class="ant-row ant-row-no-wrap"
                    >
                      <div
                        class="ant-card ant-card-bordered ant-card-hoverable step-card-style css-18lc8oi"
                      >
                        <div
                          class="ant-card-body"
                        >
                          <span
                            class="step-card-title"
                          >
                            执行上线
                          </span>
                          <div
                            class="step-card-desc"
                          >
                            -
                          </div>
                          <div
                            class="step-card-operator"
                          >
                            <div
                              class="operator-title"
                            >
                              执行人
                            </div>
                            <div
                              class="operator-content"
                            >
                              <svg
                                color="#1CB889"
                                height="18"
                                viewBox="0 0 16 16"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 1.333A6.67 6.67 0 0 1 14.666 8 6.67 6.67 0 0 1 8 14.667 6.67 6.67 0 0 1 1.333 8 6.67 6.67 0 0 1 8 1.333m-3.985 8.944c.979 1.46 2.448 2.39 4.091 2.39s3.113-.93 4.091-2.39a5.98 5.98 0 0 0-4.09-1.61 5.98 5.98 0 0 0-4.092 1.61M8 7.333a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                                  fill="currentColor"
                                />
                              </svg>
                              <span
                                class="review-exec-auth-text"
                              >
                                匹配拥有数据源上线权限的成员
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col workflow-template-right-module"
              style="flex: 0 0 360px;"
            >
              <div
                class="css-ngjyz4"
              >
                <div
                  class="css-4kgje5"
                >
                  <span
                    class="ant-typography top-auth-level"
                  >
                    允许创建工单的最高审核等级
                  </span>
                  <span
                    class="ant-typography auth-level-text"
                    style="color: rgb(235, 173, 28);"
                  >
                    告警(Warning)
                  </span>
                  <div
                    aria-valuenow="75"
                    class="ant-progress ant-progress-status-normal ant-progress-steps"
                    role="progressbar"
                  >
                    <div
                      class="ant-progress-steps-outer"
                    >
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item ant-progress-steps-item-active"
                        style="background-color: rgb(235, 173, 28); width: 76.5px; height: 4px;"
                      />
                      <div
                        class="ant-progress-steps-item"
                        style="background-color: rgb(235, 234, 231); width: 76.5px; height: 4px;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="css-aaj731"
                >
                  <span
                    class="ant-typography auth-info-title"
                  >
                    注意事项
                  </span>
                  <div
                    class="ant-typography auth-info-item"
                  >
                    <ul
                      class="auth-info-item-icon"
                    >
                      <li>
                        若项目管理员对审批流程模板进行了修改，不会对已经在审批流程的工单造成影响；
                      </li>
                      <li>
                        被驳回的工单，需要创建人更新SQL语句后重新发起，驳回记录可在 “工单进度-工单历史操作” 中查看；
                      </li>
                      <li>
                        处于 “审核节点” 中的工单，创建人可在工单详情页随时关闭；
                      </li>
                      <li>
                        审核工单：审核人在该步骤可以执行「审核通过」或「驳回」操作；
                      </li>
                      <li>
                        上线工单：执行人在该步骤可以执行「执行上线」或「驳回」操作。
                      </li>
                    </ul>
                  </div>
                </div>
                <div
                  class="css-aaj731"
                >
                  <span
                    class="ant-typography auth-info-title"
                  >
                    审批流程模板更新时间
                  </span>
                  <div
                    class="ant-typography auth-info-item auth-info-time"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 18 18"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9 16.5a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15M9 15A6 6 0 1 0 9 3a6 6 0 0 0 0 12m.75-6h3v1.5h-4.5V5.25h1.5z"
                        fill="#8A8F99"
                      />
                    </svg>
                    <span
                      class="update-time"
                    >
                      2023-12-26 14:19:12
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
